[project]
name = "nacos-toolkit"
version = "0.1.0"
description = "Nacos configuration parsing and management tool"
readme = "README.md"
license = "MIT"
authors = [
    { name = "nacos-toolkit contributors" }
]
requires-python = ">=3.12"
keywords = ["nacos", "config", "configuration", "template", "yaml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyyaml>=6.0",
    "nacos-sdk-python>=1.0.0",
    "loguru>=0.7.0",
]

[project.urls]
Homepage = "https://pypi.org/project/nacos-toolkit/"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
